[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/sprite/interface/resume_selected_button.png" type="Texture" id=1]
[ext_resource path="res://scenes/interface/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=3]
[ext_resource path="res://scenes/interface/TButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/interface/Pause.gd" type="Script" id=5]
[ext_resource path="res://assets/sprite/boss/levelA_boss.png" type="Texture" id=6]
[ext_resource path="res://resources/fontx16.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/sprite/weapon/mg_side.png" type="Texture" id=22]
[ext_resource path="res://assets/sprite/interface/resume_normal_button.png" type="Texture" id=23]
[ext_resource path="res://assets/sprite/interface/menu_selected_button.png" type="Texture" id=24]
[ext_resource path="res://assets/sprite/interface/menu_normal_button.png" type="Texture" id=25]
[ext_resource path="res://assets/sprite/other/pico8_invaders_sprites_LARGE.png" type="Texture" id=26]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 26 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 26 )
region = Rect2( 96, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 26 )
region = Rect2( 96, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 26 )
region = Rect2( 96, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 26 )
region = Rect2( 96, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 26 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 26 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 26 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 26 )
region = Rect2( 48, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 26 )
region = Rect2( 64, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 26 )
region = Rect2( 80, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 26 )
region = Rect2( 96, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 26 )
region = Rect2( 112, 96, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 26 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 26 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 26 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 26 )
region = Rect2( 48, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 26 )
region = Rect2( 64, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 26 )
region = Rect2( 80, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 26 )
region = Rect2( 96, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 26 )
region = Rect2( 112, 96, 16, 16 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="HContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftScreen" type="ViewportContainer" parent="HContainer"]
margin_right = 118.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HContainer/LeftScreen"]
size = Vector2( 118, 270 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="VContainer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport"]
margin_right = 118.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBPlayer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer"]
margin_left = 41.0
margin_top = 16.0
margin_right = 77.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="TPlayer" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/VBPlayer"]
margin_right = 36.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "PLAYER"
align = 1
valign = 1

[node name="IPlayer" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/VBPlayer"]
margin_top = 17.0
margin_right = 36.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/VBPlayer/IPlayer"]
frames = SubResource( 2 )
centered = false
offset = Vector2( 0, 5 )

[node name="HealthContainer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer"]
margin_top = 70.0
margin_right = 118.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="THealth" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 12 )
text = "LIVES / SHIELD"
align = 1
valign = 1

[node name="MHealth" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer"]
margin_top = 17.0
margin_right = 118.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 10

[node name="HBHealth" type="HBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth"]
margin_left = 10.0
margin_right = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LHealthA" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth"]
margin_right = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth/LHealthA"]
frames = SubResource( 4 )
centered = false

[node name="LHealthB" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth"]
margin_left = 28.0
margin_right = 52.0
size_flags_horizontal = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth/LHealthB"]
frames = SubResource( 6 )
centered = false

[node name="LHealthC" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth"]
margin_left = 56.0
margin_right = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth/LHealthC"]
frames = SubResource( 8 )
centered = false

[node name="LHealthD" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth"]
margin_left = 84.0
margin_right = 108.0
size_flags_horizontal = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/HealthContainer/MHealth/HBHealth/LHealthD"]
frames = SubResource( 10 )
centered = false
flip_h = true

[node name="ScoreContainer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer"]
margin_top = 113.0
margin_right = 118.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="MScore" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer"]
margin_right = 118.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBScore" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore"]
margin_right = 118.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="TScore" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore"]
margin_right = 118.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 12 )
text = "HIGHSCORE / SCORE"
align = 1
valign = 1

[node name="MHighScore" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore"]
margin_top = 13.0
margin_right = 118.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBHighScore" type="HBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MHighScore"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="IScore" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MHighScore/HBHighScore"]
margin_left = 11.0
margin_right = 11.0
margin_bottom = 13.0
size_flags_horizontal = 6
size_flags_vertical = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MHighScore/HBHighScore/IScore"]
frames = SubResource( 19 )
playing = true
centered = false

[node name="Lx" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MHighScore/HBHighScore"]
margin_left = 26.0
margin_right = 48.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.960784, 0.894118, 0.0941176, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LScore" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MHighScore/HBHighScore"]
margin_left = 52.0
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.960784, 0.894118, 0.0941176, 1 )
text = "0"
align = 1
valign = 1

[node name="MCurrentScore" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore"]
margin_top = 26.0
margin_right = 118.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBCurrentScore" type="HBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MCurrentScore"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="IScore" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MCurrentScore/HBCurrentScore"]
margin_left = 11.0
margin_right = 11.0
margin_bottom = 13.0
size_flags_horizontal = 6
size_flags_vertical = 3
stretch_mode = 4

[node name="ASprite" type="AnimatedSprite" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MCurrentScore/HBCurrentScore/IScore"]
frames = SubResource( 28 )
frame = 4
playing = true
centered = false

[node name="Lx" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MCurrentScore/HBCurrentScore"]
margin_left = 26.0
margin_right = 48.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LScore" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/ScoreContainer/MScore/VBScore/MCurrentScore/HBCurrentScore"]
margin_left = 52.0
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="PowerContainer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer"]
margin_top = 172.0
margin_right = 118.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="MPowerup" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer"]
margin_right = 118.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBPowerup" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup"]
margin_right = 118.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="TPowerup" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
text = "POWERUP / SUPER"
align = 1
valign = 1

[node name="HBPowerup" type="HBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup"]
margin_top = 17.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="IPowerup" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup"]
margin_left = 14.0
margin_right = 14.0
margin_bottom = 13.0
size_flags_horizontal = 6
size_flags_vertical = 3
stretch_mode = 4

[node name="Sprite" type="Sprite" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup/IPowerup"]
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 128, 16, 16 )

[node name="Lx" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup"]
margin_left = 33.0
margin_right = 50.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_fonts/font = ExtResource( 12 )
text = "x"
valign = 1

[node name="LPowerup" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup"]
margin_left = 54.0
margin_right = 83.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
text = "0"
valign = 1

[node name="IGun" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup"]
margin_left = 87.0
margin_top = 6.0
margin_right = 118.0
margin_bottom = 6.0
size_flags_horizontal = 3
size_flags_vertical = 6
stretch_mode = 4

[node name="Sprite" type="Sprite" parent="HContainer/LeftScreen/Viewport/VContainer/PowerContainer/MPowerup/VBPowerup/HBPowerup/IGun"]
texture = ExtResource( 22 )
centered = false

[node name="SuperContainer" type="VBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer"]
margin_top = 216.0
margin_right = 118.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="MSuper" type="MarginContainer" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBSuper" type="HBoxContainer" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="ISuper" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper/HBSuper"]
margin_left = 14.0
margin_right = 14.0
margin_bottom = 13.0
size_flags_horizontal = 6
size_flags_vertical = 3
stretch_mode = 4

[node name="Sprite" type="Sprite" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper/HBSuper/ISuper"]
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 112, 112, 16, 16 )

[node name="Lx" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper/HBSuper"]
margin_left = 33.0
margin_right = 50.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_fonts/font = ExtResource( 12 )
text = "x"
valign = 1

[node name="LSuper" type="Label" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper/HBSuper"]
margin_left = 54.0
margin_right = 83.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
text = "0"
valign = 1

[node name="IGun" type="TextureRect" parent="HContainer/LeftScreen/Viewport/VContainer/SuperContainer/MSuper/HBSuper"]
margin_left = 87.0
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LCamera" parent="HContainer/LeftScreen/Viewport" instance=ExtResource( 2 )]

[node name="MidleScreen" type="ViewportContainer" parent="HContainer"]
margin_left = 122.0
margin_right = 358.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
stretch = true

[node name="Viewport" type="Viewport" parent="HContainer/MidleScreen"]
size = Vector2( 236, 270 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="MCamera" parent="HContainer/MidleScreen/Viewport" instance=ExtResource( 2 )]

[node name="RightScreen" type="ViewportContainer" parent="HContainer"]
margin_left = 362.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="VContainer" type="VBoxContainer" parent="HContainer/RightScreen"]
margin_right = 118.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBBoss" type="VBoxContainer" parent="HContainer/RightScreen/VContainer"]
margin_top = 23.0
margin_right = 118.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="TBoss" type="Label" parent="HContainer/RightScreen/VContainer/VBBoss"]
margin_right = 118.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
text = "BOSS"
align = 1
valign = 1

[node name="IBoss" type="TextureRect" parent="HContainer/RightScreen/VContainer/VBBoss"]
margin_top = 17.0
margin_right = 118.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="MidleVContainer" type="VBoxContainer" parent="HContainer/RightScreen/VContainer"]
margin_top = 91.0
margin_right = 118.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Level" type="Label" parent="HContainer/RightScreen/VContainer/MidleVContainer"]
margin_top = 28.0
margin_right = 118.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 12 )
text = "LEVEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="HContainer/RightScreen/VContainer/MidleVContainer"]
margin_top = 45.0
margin_right = 118.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 12 )
text = "LEVELA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottVContainer" type="VBoxContainer" parent="HContainer/RightScreen/VContainer"]
margin_top = 182.0
margin_right = 118.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="HContainer/RightScreen"]
size = Vector2( 118, 270 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="RCamera" parent="HContainer/RightScreen/Viewport" instance=ExtResource( 2 )]

[node name="Pause" type="Node2D" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 5 )

[node name="VContainer" type="VBoxContainer" parent="Pause"]
margin_top = 180.0
margin_right = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Pause/VContainer" instance=ExtResource( 4 )]
margin_left = 190.0
margin_right = 290.0
size_flags_horizontal = 6
texture_normal = ExtResource( 23 )
texture_focused = ExtResource( 1 )

[node name="Menu" parent="Pause/VContainer" instance=ExtResource( 4 )]
margin_left = 190.0
margin_top = 24.0
margin_right = 290.0
margin_bottom = 44.0
size_flags_horizontal = 6
texture_normal = ExtResource( 25 )
texture_focused = ExtResource( 24 )
scene = "res://scenes/interface/Menu.tscn"
[connection signal="tree_entered" from="." to="." method="on_world_tree_entered"]
[connection signal="tree_exited" from="." to="." method="on_world_tree_exited"]
[connection signal="send_scene" from="Pause/VContainer/Resume" to="Pause" method="on_resume_send_scene"]
[connection signal="send_scene" from="Pause/VContainer/Menu" to="Pause" method="on_menu_send_scene"]
